修正圖片位置

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
                 <h2 class="fw-bold text-align-c">聯名設計鏡框</h2>
                 <ul class="design-cards">
                     <li class="design-cards-content">
-                        <img src="/img/home-section4-1.png" alt="DOUBLE A+">
+                        <img src="img/home-section4-1.png" alt="DOUBLE A+">
                         <h3 class="text-align-c">DOUBLE A+</h3>
                     </li>
                     <li class="design-cards-content">
-                        <img src="/img/home-section4-2.png" alt="YOUTH">
+                        <img src="img/home-section4-2.png" alt="YOUTH">
                         <h3 class="text-align-c">YOUTH</h3>
                     </li>
                 </ul>
@@ -106,11 +106,11 @@
                 <h2 class="fw-bold text-align-c">聯名設計鏡框</h2>
                 <ul class="design-cards">
                     <li class="design-cards-content">
-                        <img src="/img/home-section4-1-sm.png" alt="DOUBLE A+">
+                        <img src="img/home-section4-1-sm.png" alt="DOUBLE A+">
                         <h3 class="text-align-c">DOUBLE A+</h3>
                     </li>
                     <li class="design-cards-content">
-                        <img src="/img/home-section4-2-sm.png" alt="YOUTH">
+                        <img src="img/home-section4-2-sm.png" alt="YOUTH">
                         <h3 class="text-align-c">YOUTH</h3>
                     </li>
                 </ul>
@@ -121,7 +121,7 @@
                 <h2 class="fw-bold text-align-c primary-color">顧客推薦</h2>
                 <ul class="endorsement-cards row">
                     <li class="endorsement-cards-content col-3 col-sm-12">
-                        <img src="/img/home-section5-1.png" alt="customer-1">
+                        <img src="img/home-section5-1.png" alt="customer-1">
                         <div class="customer customer-1">
                             <h3 class="fw-medium">Jessy</h3>
                             <p>眼鏡品質優良，下次還會想來這邊購買！</p>
@@ -129,7 +129,7 @@
                         </div>
                     </li>
                     <li class="endorsement-cards-content col-3 col-sm-12">
-                        <img src="/img/home-section5-2.png" alt="customer-2">
+                        <img src="img/home-section5-2.png" alt="customer-2">
                         <div class="customer customer-2">
                             <h3 class="fw-medium">凱倫</h3>
                             <p>做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！ 20 分鐘即可完成。</p>
@@ -137,7 +137,7 @@
                         </div>
                     </li>
                     <li class="endorsement-cards-content col-3 col-sm-12">
-                        <img src="/img/home-section5-3.png" alt="customer-3">
+                        <img src="img/home-section5-3.png" alt="customer-3">
                         <div class="customer customer-3">
                             <h3 class="fw-medium">悠悠</h3>
                             <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
@@ -145,7 +145,7 @@
                         </div>
                     </li>
                     <li class="endorsement-cards-content col-3 col-sm-12">
-                        <img src="/img/home-section5-4.png" alt="customer-4">
+                        <img src="img/home-section5-4.png" alt="customer-4">
                         <div class="customer customer-4">
                             <h3 class="fw-medium">Kyuan</h3>
                             <p>服務很好，品質沒有任何問題，非常喜歡。</p>
@@ -208,9 +208,9 @@
                 </div>
                 <div class="footer-social">
                     <ul class="footer-social-icon">
-                        <li><a href="#"><img src="/img/ic-social-fb.png" alt="fb"></a></li>
-                        <li><a href="#"><img src="/img/ic_social_ig.png" alt="ig"></a></li>
-                        <li><a href="#"><img src="/img/ic_social_line.png" alt="line"></a></li>
+                        <li><a href="#"><img src="img/ic-social-fb.png" alt="fb"></a></li>
+                        <li><a href="#"><img src="img/ic_social_ig.png" alt="ig"></a></li>
+                        <li><a href="#"><img src="img/ic_social_line.png" alt="line"></a></li>
                     </ul>
                 </div>
             </div>
