--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
                 <div class="check">
                     <input type="checkbox" name="hobby" value="music">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。
                 </div>
-                <a href="#">確認送出</a>
+                <div class="btn">
+                    <a href="#">確認送出</a>
+                </div>
             </div>
         </div>
     </main>
