--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <input type="checkbox" name="hobby" value="music">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。
                 </div>
                 <div class="btn">
-                    <a href="#">確認送出</a>
+                    <a href="#" class="contact-btn">確認送出</a>
                 </div>
             </div>
         </div>
