--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
             </div>
         </div>
         <div class="endorsement">
-            <div class="container container-sm">
+            <div class="container container-md container-sm">
                 <h2 class="fw-bold text-align-c primary-color">顧客推薦</h2>
                 <ul class="endorsement-cards row">
-                    <li class="endorsement-cards-content col-3 col-sm-12">
+                    <li class="endorsement-cards-content col-3 col-md-6  col-sm-12">
                         <img src="img/home-section5-1.png" alt="customer-1">
                         <div class="customer customer-1">
                             <h3 class="fw-medium">Jessy</h3>
@@ -128,7 +128,7 @@
                             <p class="date">2021/06/20</p>
                         </div>
                     </li>
-                    <li class="endorsement-cards-content col-3 col-sm-12">
+                    <li class="endorsement-cards-content col-3 col-md-6 col-sm-12">
                         <img src="img/home-section5-2.png" alt="customer-2">
                         <div class="customer customer-2">
                             <h3 class="fw-medium">凱倫</h3>
@@ -136,7 +136,7 @@
                             <p class="date">2021/04/18</p>
                         </div>
                     </li>
-                    <li class="endorsement-cards-content col-3 col-sm-12">
+                    <li class="endorsement-cards-content col-3 col-md-6 col-sm-12">
                         <img src="img/home-section5-3.png" alt="customer-3">
                         <div class="customer customer-3">
                             <h3 class="fw-medium">悠悠</h3>
@@ -144,7 +144,7 @@
                             <p class="date">2020/12/25</p>
                         </div>
                     </li>
-                    <li class="endorsement-cards-content col-3 col-sm-12">
+                    <li class="endorsement-cards-content col-3 col-md-6 col-sm-12">
                         <img src="img/home-section5-4.png" alt="customer-4">
                         <div class="customer customer-4">
                             <h3 class="fw-medium">Kyuan</h3>
