新增平板版型

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <nav class="nav">
-            <div class="nav-content container">
+            <div class="nav-content container container-md">
                 <h1><a href="#" class="logo">眼鏡官網</a></h1>
                 <ul class="menu">
                     <li><a href="#">系列鏡框</a></li>
@@ -30,7 +30,7 @@
             </div>
         </nav>
         <div class="home-header">
-            <div class="container container-sm">
+            <div class="home-header-container container container-md container-sm">
                 <div class="header-content">
                     <p class="primary-color">Promise-Desert 2020 早春系列</p>
                     <h2 class="primary-color fw-bold">看得清，才能看得遠</h2>
@@ -41,25 +41,25 @@
     </header>
     <main>
         <div class="expertise">
-            <div class="container container-sm">
+            <div class="container container-md container-sm">
                 <h2 class="fw-bold primary-color">用專業的心，做專業的事</h2>
                 <ul class="expertise-cards row">
-                    <li class="expertise-cards-content text-align-c col-3 col-sm-12">
+                    <li class="expertise-cards-content text-align-c col-3 col-md-6 col-sm-12">
                         <span class="material-symbols-outlined primary-color fw-bold">paid</span>
                         <h3 class="primary-color fw-bold">單一價格</h3>
                         <p class="text-align-l">無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
                     </li>
-                    <li class="expertise-cards-content text-align-c col-3 col-sm-12">
+                    <li class="expertise-cards-content text-align-c col-3 col-md-6 col-sm-12">
                         <span class="material-symbols-outlined primary-color fw-bold">schedule</span>
                         <h3 class="primary-color fw-bold">20 分鐘即可取件</h3>
                         <p class="text-align-l">為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
                     </li>
-                    <li class="expertise-cards-content text-align-c col-3 col-sm-12">
+                    <li class="expertise-cards-content text-align-c col-3 col-md-6 col-sm-12">
                         <span class="material-symbols-outlined primary-color fw-bold">favorite</span>
                         <h3 class="primary-color fw-bold">安心售後服務</h3>
                         <p class="text-align-l">我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
                     </li>
-                    <li class="expertise-cards-content text-align-c col-3 col-sm-12">
+                    <li class="expertise-cards-content text-align-c col-3 col-md-6 col-sm-12">
                         <span class="material-symbols-outlined primary-color fw-bold">voicemail</span>
                         <h3 class="primary-color fw-bold">關於鏡片</h3>
                         <p class="text-align-l">使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
@@ -68,18 +68,18 @@
             </div>
         </div>
         <div class="frames">
-            <div class="container container-sm">
+            <div class="container container-md container-sm">
                 <h2 class="fw-bold primary-color text-align-c">經典系列鏡框</h2>
                 <ul class="frames-cards row">
-                    <li class="frames-cards-content col-4 col-sm-12">
+                    <li class="frames-cards-content col-4 col-md-6 col-sm-12">
                         <img src="img/home-section3-1.png" alt="OPTICAL">
                         <h3 class="text-align-c">OPTICAL</h3>
                     </li>
-                    <li class="frames-cards-content col-4 col-sm-12">
+                    <li class="frames-cards-content col-4 col-md-6 col-sm-12">
                         <img src="img/home-section3-2.png" alt="SUNGLASSES">
                         <h3 class="text-align-c">SUNGLASSES</h3>
                     </li>
-                    <li class="frames-cards-content col-4 col-sm-12">
+                    <li class="frames-cards-content col-4 col-md-6 col-sm-12">
                         <img src="img/home-section3-3.png" alt="FUNCTIONAL">
                         <h3 class="text-align-c">FUNCTIONAL</h3>
                     </li>
@@ -87,7 +87,7 @@
             </div>
         </div>
         <div class="design design-full-screen">
-            <div class="container">
+            <div class="container container-md container-sm">
                 <h2 class="fw-bold text-align-c">聯名設計鏡框</h2>
                 <ul class="design-cards">
                     <li class="design-cards-content">
@@ -156,7 +156,7 @@
             </div>
         </div>
         <div class="contact">
-            <div class="contact-container contact-container-sm">
+            <div class="contact-container">
                 <h2 class="fw-bold text-align-c primary-color">聯絡我們</h2>
                 <p>我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
                 <div class="mb-16 person">
@@ -185,7 +185,7 @@
         </div>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container container-md container-sm">
             <div class="footer-under-line">
                 <div class="footer-content">
                     <ul class="footer-content-menu">
@@ -218,7 +218,7 @@
             </div>
         </div>
         <div class="statement">
-            <div class="statement-container container">
+            <div class="statement-container container container-sm">
                 <p>Copyright © 2020 Glasses.All rights reserved.</p>
                 <div class="statement-content">
                     <a href="#">隱私權政策</a>
