--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             </div>
         </div>
         <div class="statement">
-            <div class="statement-container container container-sm">
+            <div class="statement-container container">
                 <p>Copyright © 2020 Glasses.All rights reserved.</p>
                 <div class="statement-content">
                     <a href="#">隱私權政策</a>
